コミットしたぞ

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>アジア制覇するぞ
+    <div>アジア制覇する
     </div>
+    <p>南米制覇するぞ</p>
     
 </body>
 </html>
